--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s22.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s22.html
@@ -143,6 +143,7 @@ header {
 <p id="Lp5">後半はエロシーンは無く、フリードとリダ姉の話です！ようやくリンクネクトについて、宿屋に泊まります！</p>
 
 <br><b><p><font size="5">22話 湯船でリオのアナルに中出しとリンクネクトに着いた姉弟(♡2)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">「はぁ......はぁっ♡♡ リオのアナルっ......♡♡ 尻穴ぁっ......っ♡」</p>
 <p id="L2"><br /></p>
@@ -291,6 +292,8 @@ header {
 <p id="L145">「にちゅっ♡♡ ぬちゃぷっ......♡♡」</p>
 <p id="L146"><br /></p>
 <p id="L147">俺とリオは唇を重ね、体位を変えながら、何度もこの大浴場にて性行為に至った。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L148"><br /></p>
 <p id="L149"><br /></p>
 <p id="L150"><br /></p>
@@ -489,7 +492,7 @@ header {
 <p id="L343">リダ姉はオレの入っているベッドの中に入ってきた。</p>
 <p id="L344"><br /></p>
 <p id="L345">「______寝ましょうかっ♪」</p>
-
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s21.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
