--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s23.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s23.html
@@ -151,6 +151,7 @@ header {
 <p id="Lp12"><br /></p>
 
 <br><b><p><font size="5">23話 姉弟で寝るか兄妹でヤるか(♡2)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">「なっ、なっ......っ！！ 何言ってんだリダ姉っ！」</p>
 <p id="L2"><br /></p>
@@ -277,6 +278,7 @@ header {
 <p id="L123">「んっ...... おやすみっ、お姉______ちゃんっ......///」</p>
 <p id="L124"><br /></p>
 <p id="L125">オレとリダ姉は、手を絡め合ってから、眠りに着いた。</p>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L126"><br /></p>
 <p id="L127"><br /></p>
 <p id="L128"><br /></p>
@@ -579,6 +581,7 @@ header {
 <p id="L425">......。</p>
 <p id="L426"><br /></p>
 <p id="L427"><br /></p>
+<ins class="dmm-widget-placement" data-id="269ae3ba985a848bbd0e2f04431859c6" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="269ae3ba985a848bbd0e2f04431859c6"></script>
 <p id="L428">気がつけば、視界が真っ暗であった。</p>
 <p id="L429">これは、今、寝ているところだろう。</p>
 <p id="L430">先ほどまで、リンクネクトで歩いていたはずなのだが、今の俺は寝ている......。</p>
@@ -589,6 +592,7 @@ header {
 <p id="L435">「......マノミさん。彼、起きましたよ。」</p>
 <p id="L436"><br /></p>
 <p id="L437">「わぁっ、本当だねぇ！ やっほー、聞こえてるー？」</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 
 <br><br><a href="fukusyu-no-oltudoaizu-s22.html"><b><p><font size="5">＜</font></p></b></a>
