--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s24.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s24.html
@@ -151,7 +151,7 @@ header {
 <p id="Lp12"><br /></p>
 
 <br><b><p><font size="5">24話 椅子で拘束されたリベルは</font></p></b>
-
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 <p id="L1">2人の印象は正反対のものだった。</p>
 <p id="L2">1人は黒髪のショートヘアーで、身長はやや高めの女性で、雰囲気や、口調などからクールな印象を受けた。</p>
 <p id="L3">そのクールな女性から『マノミさん』と呼ばれた女性は、黄色とオレンジ色が混じりあったような独特な髪色で、身長は低め、雰囲気や口調から、どこか頭のネジの抜けた印象を受けた。</p>
@@ -454,7 +454,8 @@ header {
 <p id="L300">「じゃあねっリベルくん！ よい、奴隷生活を。」</p>
 <p id="L301"><br /></p>
 <p id="L302">ガコンっ.....と金属が何かとぶつかるような音を響かせた後、俺を入れた巨大な筒は地下へ向かって、沈んで行った。</p>
-
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+		
 <br><br><a href="fukusyu-no-oltudoaizu-s23.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
 <a href="fukusyu-no-oltudoaizu-s25.html"><b><p><font size="5">＞</font></p></b></a>
