--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s25.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s25.html
@@ -151,6 +151,7 @@ header {
 <p id="Lp12"><br /></p>
 
 <br><b><p><font size="5">25話 地下奴隷収容所のしくみとレズの探偵(♡2)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">あれからどのくらい経ったのだろう。</p>
 <p id="L2"><br /></p>
@@ -244,6 +245,8 @@ header {
 <p id="L90">「うんっ！ ついでに色んな人に話しかけてみるといいよっ！」</p>
 <p id="L91"><br /></p>
 <p id="L92">トランの声に頷いてから、俺はこの地下奴隷収容所の中を歩き始めた。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L93"><br /></p>
 <p id="L94"><br /></p>
 <p id="L95"><br /></p>
@@ -418,8 +421,7 @@ header {
 <p id="L264">そんなイソギの気持ちに答えるためにも______何より、自分自身に快感を与えるためにも、腰をイソギに押し付けて、味わいやすくしてあげるのだ♡♡</p>
 <p id="L265"><br /></p>
 <p id="L266">ぴちゃぴちゃと、わざと音を立てて、いやらしく私の愛液を啜り上げてくるイソギに、私の身体はもう、メロメロなのだ......♡♡</p>
-<p id="L267"><br /></p>
-<p id="L268"><br /></p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s24.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
