--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s26.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s26.html
@@ -153,6 +153,7 @@ header {
 <p id="Lp14"><br /></p>
 
 <br><b><p><font size="5">26話 脱出は不可能！ 地下奴隷施設！！(♡2)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">・</p>
 <p id="L2"><br /></p>
@@ -312,6 +313,8 @@ header {
 <p id="L156">「......リオのためにも早くここから出ないとな。」</p>
 <p id="L157"><br /></p>
 <p id="L158">俺は、誰にも聞かれないように心の声を一言、呟いた。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L159"><br /></p>
 <p id="L160"><br /></p>
 <p id="L161"><br /></p>
@@ -385,6 +388,8 @@ header {
 <p id="L229">「そうだ。 貴様の願いをな。 今から余が貴様を______」</p>
 <p id="L230"><br /></p>
 <p id="L231">「______ <ruby><rb>亡骸</rb><rp>(</rp><rt>じゆう</rt><rp>)</rp></ruby>にする」</p>
+<ins class="dmm-widget-placement" data-id="d22e1724380445c26150de13c2eb75cf" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="d22e1724380445c26150de13c2eb75cf"></script>
+
 <p id="L232"><br /></p>
 <p id="L233"><br /></p>
 <p id="L234"><br /></p>
@@ -479,6 +484,8 @@ header {
 <p id="L323">「そろそろ、あの時間......では？」</p>
 <p id="L324"><br /></p>
 <p id="L325">「......え？」</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+
 
 <br><br><a href="fukusyu-no-oltudoaizu-s25.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
