--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s27.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s27.html
@@ -141,7 +141,8 @@ header {
 <p id="Lp3">一応、リベルは入れたり入れられたりしませんので、安心してください！！</p>
 
 <br><b><p><font size="5">27話 地下奴隷収容所での食事、そして帝国所属・ライズ国へ</font></p></b>
-
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
+		
 <p id="L1">・</p>
 <p id="L2">______地下奴隷収容所______</p>
 <p id="L3"><br /></p>
@@ -430,6 +431,8 @@ header {
 <p id="L286">「お、おい、ちょっと待ってくれ！！ その王ってのがっ！ 男、をっ......落とす、のが好きってっ......どうっ.....い、う______」</p>
 <p id="L287"><br /></p>
 <p id="L288">急な眠気に襲われた俺は抗う暇もなく、重くなったまぶたを閉じた......。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L289"><br /></p>
 <p id="L290"><br /></p>
 <p id="L291"><br /></p>
@@ -475,9 +478,7 @@ header {
 <p id="L331">「ふふっ、<ruby><rb>愉</rb><rp>(</rp><rt>たの</rt><rp>)</rp></ruby>しみ......だ」</p>
 <p id="L332"><br /></p>
 <p id="L333">興奮から王は、ゆっくりと舌で唇を湿らせた。</p>
-<p id="L334"><br /></p>
-<p id="L335"><br /></p>
-<p id="L336"><br /></p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s26.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
