--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s28.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s28.html
@@ -144,7 +144,7 @@ header {
 <p id="Lp5">ですっ！</p>
 
 <br><b><p><font size="5">28話 マキシード王の足に射精を、尻穴に口付けを(♡2)</font></p></b>
-
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 <p id="L1">......。</p>
 <p id="L2">気が付けば、瞼をとじていた。</p>
 <p id="L3">身体が重く感じる。</p>
@@ -160,6 +160,8 @@ header {
 <p id="L13">そ、そうだ！</p>
 <p id="L14">このままだと、その王にやばいことされてしまうっ！！</p>
 <p id="L15">早くっ......！！早く目覚めるんだ......っっ！！</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L16"><br /></p>
 <p id="L17">「んっ......んんっ......っっ！!！」</p>
 <p id="L18"><br /></p>
@@ -172,7 +174,6 @@ header {
 <p id="L25"><br /></p>
 <p id="L26"><ruby><rb>彼女</rb><rp>(</rp><rt>これ</rt><rp>)</rp></ruby>を僅かでも______例え、姿、声が知らなくとも______男だと錯覚していた自分自身の愚かさが、このマキシード・プライム・ライジングの姿を目の当たりにして深々と実感することになったのだ。</p>
 <p id="L27"><br /></p>
-<p id="L28"><a href="//22108.mitemin.net/userpageimage/top/t/a1/icode/i420827/" target="_blank">【挿絵表示】</a></p>
 <p id="L29"><br /></p>
 <p id="L30">まず、でかいのだ。</p>
 <p id="L31">あの乳は巨乳などという尺度から大きく離れており、顔の3倍以上はある乳を言うのならば爆乳だ。</p>
@@ -444,6 +445,7 @@ header {
 <p id="L297">と、そこで、扉にノックが響き、その扉からメイドらしき服装をした1人の女が入ってきた。</p>
 <p id="L298"><br /></p>
 <p id="L299">「マキシード王、ご夕食の準備が整いましたっ。」</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s27.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
