--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s29.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s29.html
@@ -145,6 +145,7 @@ header {
 <p id="Lp6"><br /></p>
 
 <br><b><p><font size="5">29話 マキシード王の食器となりて、男体盛りを(♡3)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">「ほう......丁度よい。では、向かうとしよう。<ruby><rb>行</rb><rp>(</rp><rt>ゆ</rt><rp>)</rp></ruby>くぞリベル。」</p>
 <p id="L2"><br /></p>
@@ -164,6 +165,7 @@ header {
 <p id="L16">幸運なことに、俺はマキシード王に気に入られているようなので、すぐに、俺に新しい快感を味あわせてくれるのだろう。</p>
 <p id="L17"><br /></p>
 <p id="L18">そう考えているうちに、マキシード王が足を止めたので、どうやら食事をする場に着いたらしく、それに合わせて俺も足を止めた。</p>
+<ins class="dmm-widget-placement" data-id="9cc4a82fe35a53266b165394ccde8e8a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="9cc4a82fe35a53266b165394ccde8e8a"></script>
 <p id="L19"><br /></p>
 <p id="L20">周囲を見舞わすと、多人数用の大きなテーブルに巨大な玉座が1つ置かれていた。</p>
 <p id="L21">全体的な広さを考えると、レジスト国よりも小さめな食事場だ。だが、レジスト国のあの場は王が食事を持ちいた接客を想定しているものに対し、こちらの場合は、王1人のための食事場を想定したもののようだ。</p>
@@ -467,6 +469,8 @@ header {
 <p id="L319">と言っても、俺は台の上で仰向けになっているため、俺の頭の近くには、丁度、マキシード王の股の部分であった。</p>
 <p id="L320"><br /></p>
 <p id="L321">「リベルよっ、腹は減っておらぬか♡？」</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+
 
 <br><br><a href="fukusyu-no-oltudoaizu-s28.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
