--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s30.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s30.html
@@ -143,6 +143,7 @@ header {
 <p id="Lp5">ですっ！</p>
 
 <br><b><p><font size="5">30話 女性器の中の刺身を愛液で食す〜葡萄酒を尿に濾過せよ〜(♡2)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">「い、いえっ。そのっ、施設で済ませているので......今は______」</p>
 <p id="L2"><br /></p>
@@ -408,7 +409,8 @@ header {
 <p id="L262">「貴様の&quot;それ&quot;だ......♡♡」</p>
 <p id="L263"><br /></p>
 <p id="L264">______マキシード王は、俺の下半身を指で示していた。</p>
-
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+		
 <br><br><a href="fukusyu-no-oltudoaizu-s29.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
 <a href="fukusyu-no-oltudoaizu-s31.html"><b><p><font size="5">＞</font></p></b></a>
