--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s31.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s31.html
@@ -144,6 +144,7 @@ header {
 <p id="Lp6">ですっ！</p>
 
 <br><b><p><font size="5">31話 お待たせしました俺のペニスのチョコレートフォンデュです(♡2)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">いや、正確には下半身に&quot;ついて&quot;いるものだ。</p>
 <p id="L2">細長く美しい指の示す先を目線で辿ると、丁度、それは俺の下半身についているペニスに当たっており、そして、俺のペニスは、この状況を喜んで、恥ずかしいほど、限界まで膨らんでビクビクと震えていた。</p>
@@ -404,7 +405,7 @@ header {
 <p id="L257">「______♡っ！！ はいっ♡」</p>
 <p id="L258"><br /></p>
 <p id="L259">マキシード王は俺の言葉に頷き、その場から立ち上がると、メイドに食事の片付けをするように指示をして、俺の首の鎖を引っ張りながら、マキシード王自身の部屋へと向かった。</p>
-<p id="L260"><br /></p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s30.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
