--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s32.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s32.html
@@ -143,6 +143,7 @@ header {
 <p id="Lp5">ですっ！</p>
 
 <br><b><p><font size="5">32話  そのディルドで俺の尻穴を責めてくださいっ！(♡2)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">マキシード王の部屋は、中央に巨大なベッドがあり、その周辺に何やら特殊な形の小道具が並べら______</p>
 <p id="L2"><br /></p>
@@ -489,6 +490,8 @@ header {
 <p id="L343">その煌めく<ruby><rb>財宝</rb><rp>(</rp><rt>ほし</rt><rp>)</rp></ruby>が______</p>
 <p id="L344"><br /></p>
 <p id="L345">______7つ流れ堕ちた。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L346"><br /></p>
 <p id="L347"><br /></p>
 <p id="L348"><br /></p>
@@ -505,7 +508,8 @@ header {
 <p id="L359">希望が確信へと変わった瞬間だった。</p>
 <p id="L360"><br /></p>
 <p id="L361">「......ついに、きたか。 早急に同胞を集めねば。」</p>
-
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+	
 <br><br><a href="fukusyu-no-oltudoaizu-s31.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
 <a href="fukusyu-no-oltudoaizu-s33.html"><b><p><font size="5">＞</font></p></b></a>
