--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s33.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s33.html
@@ -143,7 +143,7 @@ header {
 <p id="Lp4">強いて言うのなら、冒頭？のみですっ！</p>
 
 <br><b><p><font size="5">33話 姉弟でお土産選びデート(♡1)</font></p></b>
-
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 <p id="L1">・</p>
 <p id="L2"><br /></p>
 <p id="L3"><br /></p>
@@ -172,6 +172,8 @@ header {
 <p id="L26">そんな時、ふとリダ姉が、口を動かした。</p>
 <p id="L27"><br /></p>
 <p id="L28">ごめんなさい______と。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L29"><br /></p>
 <p id="L30"><br /></p>
 <p id="L31">......。</p>
@@ -471,7 +473,7 @@ header {
 <p id="L325">「はっ、腹減ったなぁ...... リダ姉っ、どこか飲食店にでも寄ろうぜ？ な？」</p>
 <p id="L326"><br /></p>
 <p id="L327">「うぅぅ......//// はいっ......////」</p>
-<p id="L328"><br /></p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s32.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
