--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s35.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s35.html
@@ -144,6 +144,7 @@ header {
 <p id="Lp6">ですっ！</p>
 
 <br><b><p><font size="5">35話 貴族の妻と不倫子作りセックス(♡2)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">「はいっ......♡ あっ______んっ、むちゅっぷっ......♡」</p>
 <p id="L2"><br /></p>
@@ -513,6 +514,7 @@ header {
 <p id="L366">「久しいな。タイラー」</p>
 <p id="L367"><br /></p>
 <p id="L368">「よぉ、エルド ......まぁ、あがれや」</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s34.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
