--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s36.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s36.html
@@ -152,6 +152,7 @@ header {
 <p id="Lp13">ですっ！！</p>
 
 <br><b><p><font size="5">36話 海賊と帝国と(♡2)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">「うむ。 こちらも急用で......な。 そうさせてもらおう。」</p>
 <p id="L2"><br /></p>
@@ -340,6 +341,8 @@ header {
 <p id="L185"><a href="//22108.mitemin.net/userpageimage/top/t/a1/icode/i440579/" target="_blank">【挿絵表示】</a></p>
 <p id="L186"><br /></p>
 <p id="L187">「______これで、よしっ。 さぁて、大将......次の場所へ案内してもらうぜ？」</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L188"><br /></p>
 <p id="L189"><br /></p>
 <p id="L190"><br /></p>
@@ -484,6 +487,7 @@ header {
 <p id="L329">それは、&quot;それ&quot;に所属しているのなら、誰でもわかる独特な手紙だ。</p>
 <p id="L330"><br /></p>
 <p id="L331">そう、その差出国は______『帝国』だ。</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s35.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
