--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s38.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s38.html
@@ -141,6 +141,7 @@ header {
 <p id="Lp2">すみませんっ！！</p>
 
 <br><b><p><font size="5">38話 帝国所属国と帝国本部</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">おれ......？</p>
 <p id="L2"><br /></p>
@@ -357,6 +358,8 @@ header {
 <p id="L213">「〜〜〜っっ////！！ メ、メイさんっ、これはっ、いったい......っ！！」</p>
 <p id="L214"><br /></p>
 <p id="L215">「何でも聞くって言ったよねリベルくんっ...... じゃあさっ、私の王子様になって♡」</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L216"><br /></p>
 <p id="L217">・</p>
 <p id="L218"><br /></p>
@@ -427,7 +430,7 @@ header {
 <p id="L283">そんな皇帝ガイウルスとは正反対の細身の男が、その皇帝の玉座の隣に立ち、他の帝国所属国の国王に向かって、ゆっくりと口を開いた。</p>
 <p id="L284"><br /></p>
 <p id="L285">「.......。えー、我が皇帝ガイウルス様の代弁役をさせて頂きます。 ......こほんっ、良くぞ集った帝国所属国の国王諸君。 私は、君たちに久しく出会えて心地よい。 ......が、しかし、今は再開を喜んでいる場合ではない。早速、本題を挙げよう。諸君らは______七つの流星、いや、&quot;罪宝&quot;を知っているだろうか？」</p>
-<p id="L286"><br /></p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s37.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
