--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s39.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s39.html
@@ -147,6 +147,7 @@ header {
 <p id="Lp8">ですっ！</p>
 
 <br><b><p><font size="5">39話 王子様(奴隷)とメイドの禁断の恋ごっこ(♡3)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">・</p>
 <p id="L2"><br /></p>
@@ -491,7 +492,7 @@ header {
 <p id="L341">「おいっっ！！ いつまで着替えているんだっ！！ 」</p>
 <p id="L342"><br /></p>
 <p id="L343">メイの言葉を遮るように、ドンドンっと扉を叩く音と、ヴァレットの怒声が鳴り響いた。</p>
-<p id="L286"><br /></p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s38.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
