--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s40.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s40.html
@@ -138,6 +138,7 @@ header {
         <br><br><br><br><br><br><br><b><p><font size="5">復讐の異色眼兄妹(オッドアイズ)～種付けして完全催眠～</font></p></b>
 
 <br><b><p><font size="5">40話 女執事の話より、手コキを</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">「やっ、やばいっ！ 王子......じゃない、リベルくんっ、ヴァレットが来ちゃう！！ 早く服を着替え直しててっ！！」</p>
 <p id="L2"><br /></p>
@@ -460,6 +461,7 @@ header {
 <p id="L319">「きっ、気になる所ですか......？」</p>
 <p id="L320"><br /></p>
 <p id="L321">「あっ、ヴァ、ヴァレットっ！！ それじゃあ、私っ、<ruby><rb>奴隷</rb><rp>(</rp><rt>どれー</rt><rp>)</rp></ruby>くんにこの部屋を教えるっ！！」</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s39.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
