--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s41.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s41.html
@@ -144,6 +144,7 @@ header {
 <p id="Lp6">などですっ！</p>
 
 <br><b><p><font size="5">41話 王は会議中。奴隷とメイドは別室で子作りセックス(♡2)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">メイは近くにある部屋を適当に指で示した。</p>
 <p id="L2">きっと、俺のフォローとしてしてくれたのだろう......しかし、問題は、その部屋は特別珍しいものでは無かったようで、ヴァレットは首を傾げたのだ。</p>
@@ -163,6 +164,8 @@ header {
 <p id="L16">俺とメイがその部屋に入って扉が閉まると、ヴァレットは頭をポリポリとかいて、ヴァレット自身以外が聞こえないように小さく呟いた。</p>
 <p id="L17"><br /></p>
 <p id="L18">「今日は、珍しく仕事熱心だな。 ......それに、あの部屋の匂い......。 いや、まさかな。」</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L19"><br /></p>
 <p id="L20"><br /></p>
 <p id="L21">・</p>
@@ -338,6 +341,7 @@ header {
 <p id="L191">「......勿論、そのつもりだが。 あえて訊いてやろう。______何故だ？」</p>
 <p id="L192"><br /></p>
 <p id="L193">「この帝国所属国の中に裏切り者がいる......と言ったら？」</p>
+<ins class="dmm-widget-placement" data-id="d22e1724380445c26150de13c2eb75cf" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="d22e1724380445c26150de13c2eb75cf"></script>
 <p id="L194"><br /></p>
 <p id="L195"><br /></p>
 <p id="L196">・</p>
@@ -472,7 +476,8 @@ header {
 <p id="L325">ぢゅっぽぢゅっぽっ......と、ピストンの度に愛液が飛び散り、俺を更に奥へと誘い、脳が痺れていき、腰を動かして気持ち良くなることしか考えられなくなって、夢中で打ち付けていくうちに、その摩擦による快感が蓄積されていく......。</p>
 <p id="L326"><br /></p>
 <p id="L327">______そして、俺はメイの<ruby><rb>腟内</rb><rp>(</rp><rt>なか</rt><rp>)</rp></ruby>で射精した。</p>
-
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+		
 <br><br><a href="fukusyu-no-oltudoaizu-s40.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
 <a href="fukusyu-no-oltudoaizu-s42.html"><b><p><font size="5">＞</font></p></b></a>
