--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s42.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s42.html
@@ -145,6 +145,7 @@ header {
 <p id="Lp6">ですっ！</p>
 
 <br><b><p><font size="5">42話 メイド長は性奴隷(おれ)の肉便器(♡2)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">どぷっ......どぷっ......と、メイの腟内へ俺の熱々の<ruby><rb>濃厚</rb><rp>(</rp><rt>のうこう</rt><rp>)</rp></ruby><ruby><rb>精液</rb><rp>(</rp><rt>ザーメン</rt><rp>)</rp></ruby>を注ぎ込んでいく......。</p>
 <p id="L2"><br /></p>
@@ -424,7 +425,9 @@ header {
 <p id="L276">「......。 なら、とっとと次にいくぞ！！」</p>
 <p id="L277"><br /></p>
 <p id="L278">ヴァレットは前を向いて歩き始めた野を確認すると、俺とメイは顔を見合せ、微笑み、唇を重ねた。</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
+		
 <br><br><a href="fukusyu-no-oltudoaizu-s41.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
 <a href="fukusyu-no-oltudoaizu-s43.html"><b><p><font size="5">＞</font></p></b></a>
