--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s43.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s43.html
@@ -143,6 +143,7 @@ header {
 <p id="Lp4">ですっ！</p>
 
 <br><b><p><font size="5">43話 女執事の話より、その身体を 城下町の説明より、その身体を(♡1)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">ヴァレットの説明を適当に相槌を入れて聞きながら、俺はメイに手コキをさせていた。</p>
 <p id="L2"><br /></p>
@@ -380,7 +381,9 @@ header {
 <p id="L234">その無言の時間が俺には心地悪く、何か気を利かせて話を始めるべきかと、俺が口を開くと同時にヴァレットは立ち止まって、言葉を発した。</p>
 <p id="L235"><br /></p>
 <p id="L236">「奴隷。......お前、城の部屋で、メイに何か命令されたのか？」</p>
-
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+		
+		
 <br><br><a href="fukusyu-no-oltudoaizu-s42.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
 <a href="fukusyu-no-oltudoaizu-s44.html"><b><p><font size="5">＞</font></p></b></a>
