--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s44.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s44.html
@@ -145,6 +145,7 @@ header {
 <p id="Lp6"><br /></p>
 
 <br><b><p><font size="5">44話 女執事に偽りの告白〜身分差の恋と欲〜 </font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">「なっ！！ えっと......その&quot;命令された&quot;とは、どう言う意味でしょうか？」</p>
 <p id="L2"><br /></p>
@@ -290,6 +291,7 @@ header {
 <p id="L142">「ふっ、それじゃあ、場所を変えるぞ」</p>
 <p id="L143"><br /></p>
 <p id="L144">そう言うと、ヴァレットは再び、俺の首輪の鎖を握り歩き始めた。</p>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L145"><br /></p>
 <p id="L146">数分と経たないうちに、そのヴァレットの望む目的地についたようで、足を止めた。</p>
 <p id="L147">そして、俺はその目の前にある建物を見ると、その建物自体は特別な装飾は無く、シンプルな民家の家のようだ。</p>
@@ -483,6 +485,7 @@ header {
 <p id="L335">「ふっ、では、命令するぞ、奴隷。 ______今すぐ、女装をしろ」</p>
 <p id="L336"><br /></p>
 <p id="L337">「______はい？」</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s43.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
