--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s45.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s45.html
@@ -142,6 +142,7 @@ header {
 <p id="Lp3">女装</p>
 
 <br><b><p><font size="5">45話 女装をさせられ、女執事にディルドで突かれちゃうぅっ......(♡2)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">ヴァレットの口から告げられたのは信じられない言葉だった。</p>
 <p id="L2">その予想もしていない______そもそも選択肢にすら入っていない言葉に俺は反射的に<ruby><rb>素</rb><rp>(</rp><rt>す</rt><rp>)</rp></ruby>の対応をしてしまったのだ。</p>
@@ -397,6 +398,8 @@ header {
 <p id="L252">「えっ......あっ、はい______」</p>
 <p id="L253"><br /></p>
 <p id="L254">「ならば<ruby><rb>______私</rb><rp>(</rp><rt>おれ</rt><rp>)</rp></ruby>の<ruby><rb>尻穴</rb><rp>(</rp><rt>アナル</rt><rp>)</rp></ruby>を気持ちよくしろっ♡」</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+
 
 <br><br><a href="fukusyu-no-oltudoaizu-s44.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
