--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s46.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s46.html
@@ -141,7 +141,8 @@ header {
 <p id="Lp2">そして......</p>
 
 <br><b><p><font size="5">46話 女執事ヴァレットとのアナルセックス〜絶頂するその瞬間に〜</font></p></b>
-
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
+		
 <p id="L1">「ヴァ、ヴァレットさんの......お尻にですか？」</p>
 <p id="L2"><br /></p>
 <p id="L3">「そうだっ♡ マキシード王も<ruby><rb>擬似男性器</rb><rp>(</rp><rt>ディルド</rt><rp>)</rp></ruby>で貴様の尻穴を突いたのだろう？ ならば、<ruby><rb>私</rb><rp>(</rp><rt>おれ</rt><rp>)</rp></ruby>が求められた時に備えて、貴様はそのマキシード王の腰使いを再現するように尻穴を<ruby><rb>解</rb><rp>(</rp><rt>ほぐ</rt><rp>)</rp></ruby>せっ♡ マキシード王に求められるシチュエーションを想像させろっっ♡♡！」</p>
@@ -295,6 +296,8 @@ header {
 <p id="L151">「はいっ、♡ 気持ちいいですっ......リベル様っ♡ あっ、ありがとうございますっっ♡♡」</p>
 <p id="L152"><br /></p>
 <p id="L153">______催眠状態にできた......という事だ。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L154"><br /></p>
 <p id="L155">それから俺は、ヴァレットの直属の部下たちをこのヴァレットの<ruby><rb>自慰部屋</rb><rp>(</rp><rt>じいべや</rt><rp>)</rp></ruby>に集め、<ruby><rb>乱交</rb><rp>(</rp><rt>らんこう</rt><rp>)</rp></ruby><ruby><rb>会合</rb><rp>(</rp><rt>パーティ</rt><rp>)</rp></ruby>を行った。</p>
 <p id="L156">直属の部下はまるで、俺に抱かれる為だけに存在していたのかのように、揃って全員女だったため、惚れさせて、1人ずつ中出しをキメていく......。</p>
@@ -358,7 +361,8 @@ header {
 <p id="L214"><br /></p>
 <p id="L215"><br /></p>
 <p id="L216">俺がそう言うと同時に、2人は俺の勃起した<ruby><rb>男性機</rb><rp>(</rp><rt>ペニス</rt><rp>)</rp></ruby>を見ながら、蕩けきったいやらしい淫乱な雌顔を浮かべた。</p>
-
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+		
 <br><br><a href="fukusyu-no-oltudoaizu-s45.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
 <a href="fukusyu-no-oltudoaizu-s47.html"><b><p><font size="5">＞</font></p></b></a>
