--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s47.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s47.html
@@ -143,7 +143,8 @@ header {
 <p id="Lp5"><br /></p>
 
 <br><b><p><font size="5">47話 メイド長と女執事と俺とのご褒美3Pセックス(♡3)</font></p></b>
-
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
+		
 <p id="L1">俺はヴァレットとメイの2人を近くの部屋に連れ込み、性行為を行う。</p>
 <p id="L2">もちろん、この行為は2人が望んだ事であるため、褒美として、2人の身体を&quot;使ってやる&quot;のだ。</p>
 <p id="L3"><br /></p>
@@ -481,6 +482,7 @@ header {
 <p id="L335">「______っっっ♡♡！！ うむっ♡！」</p>
 <p id="L336"><br /></p>
 <p id="L337">「______へ？」</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s46.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
