--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s48.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s48.html
@@ -143,6 +143,7 @@ header {
 <p id="Lp4"><br /></p>
 
 <br><b><p><font size="5">48話 女王様もいかがです？〜快楽に溺れる4Pハーレムセックス〜</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">予想をもしないマキシード王の返事に俺は間抜けな反応を示してしまった。</p>
 <p id="L2">この&quot;自身の側近たちと奴隷が快楽を楽しんでいる&quot;状況で、それに交わろうとするマキシード王のその反応は今までのマキシード王の反応とは大きく異なっていたからだ。</p>
@@ -363,6 +364,8 @@ header {
 <p id="L217">「マキシード王っ？」</p>
 <p id="L218"><br /></p>
 <p id="L219">「余の<ruby><rb>腟内</rb><rp>(</rp><rt>なか</rt><rp>)</rp></ruby>に出してみたくはないか？♡」</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L220"><br /></p>
 <p id="L221"><br /></p>
 <p id="L222">俺たち4人は再び身体を重ねた。</p>
@@ -411,6 +414,8 @@ header {
 <p id="L265">「本日からメイドを勤めさせていただく______リオですっ！ よろしくお願いいたしますっ！！」</p>
 <p id="L266"><br /></p>
 <p id="L267">______俺の<ruby><rb>妻</rb><rp>(</rp><rt>いもうと</rt><rp>)</rp></ruby>だ</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+
 
 <br><br><a href="fukusyu-no-oltudoaizu-s47.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
