--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s49.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s49.html
@@ -150,7 +150,8 @@ header {
 <p id="Lp11">リオに拘束され、責められるSM</p>
 
 <br><b><p><font size="5">49話 大好きな妹メイドとのえっち 〜おにぃちゃんの心は私だけのものだよ〜</font></p></b>
-
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
+		
 <p id="L1">「リ......リオっ！？」</p>
 <p id="L2"><br /></p>
 <p id="L3">「はいっ！ よろしくお願いいたしますねっ！ おにぃ_______あっ！えっと......」</p>
@@ -179,6 +180,8 @@ header {
 <p id="L26"><br /></p>
 <p id="L27">確認するように俺の言葉を繰り返して欲情しているマキシード王に、敬意を示しているかのように礼をした。</p>
 <p id="L28">そして、俺とリオは、共に初対面で距離感のあるような演技をしながら、その場を後にしたのだ。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L29"><br /></p>
 <p id="L30">マキシード王たちのいる場所から歩いて1分もしないうちに、俺は抑えきれず、ゆっくりと口を開いた。</p>
 <p id="L31"><br /></p>
@@ -648,6 +651,8 @@ header {
 <p id="L495">「おっ......♡ おおっ......♡ はぁーはぁっー♡ すごっ♡ えへへっ♡ 初めて使ったけどっ......♡ <ruby><rb>異能</rb><rp>(</rp><rt>これ</rt><rp>)</rp></ruby>っ......いいねっ♡ 入れているのかっ、入れられているのか、わかんなくなっちゃいそぅっ......♡ はぁっ♡はぁっ......♡  次はこれで......この状態でっ、この繋がっている状態で、気持ちよくなろうねっ______おねぇちゃん♡」</p>
 <p id="L496"><br /></p>
 <p id="L497">______壊れてしまうっ。</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+	
 
 <br><br><a href="fukusyu-no-oltudoaizu-s48.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
