--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s50.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s50.html
@@ -137,6 +137,8 @@ header {
         <br><br><br><br><br><br><br><b><p><font size="5">復讐の異色眼兄妹(オッドアイズ)～種付けして完全催眠～</font></p></b>
 
 <br><b><p><font size="5">50話 姉弟と純白騎士団長</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
+
 
 <p id="L1">「お客さんっ、着きましたよっ」</p>
 <p id="L2"><br /></p>
@@ -553,6 +555,7 @@ header {
 <p id="L413">気付けば、<ruby><rb>装身具</rb><rp>(</rp><rt>アクセサリー</rt><rp>)</rp></ruby>を手に取って、さっきまで、家に居たリダームの姿を思い浮かべていた。</p>
 <p id="L414"><br /></p>
 <p id="L415">「それにしても、リダーム______やっぱり、可愛くなったなぁ......」</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s49.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
