--- a/1fukusyu-no-oltudoaizu-m1.html
+++ b/1fukusyu-no-oltudoaizu-m1.html
@@ -223,7 +223,13 @@ header {
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (58).jpg"width=: auto; height=93% alt="イラスト">
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (59).jpg"width=: auto; height=93% alt="イラスト">
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (60).jpg"width=: auto; height=93% alt="イラスト">
-<br>完全版
+
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/sfot1 (1).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/sfot1 (2).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/sfot1 (3).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/sfot1 (4).jpg"width=: auto; height=93% alt="イラスト">
+
+<br><b><p><font size="5">完全版↓</font></p></b>
 <br><br>ファンザ 880円
 <br><a href="https://al.dmm.co.jp/?lurl=https%3A%2F%2Fwww.dmm.co.jp%2Fdc%2Fdoujin%2F-%2Fdetail%2F%3D%2Fcid%3Dd_228366%2F&af_id=gesunayakito-001&ch=toolbar&ch_id=text" rel="nofollow">復讐の異色眼兄妹〜種付けして完全催●〜 正義の虐殺と大義の強●</a>
 <br>DLサイト 880円
@@ -231,6 +237,7 @@ header {
 
 
 <br><script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+<br><ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 <br><ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <br><ins class="dmm-widget-placement" data-id="6283c11b8c45990f98e15a54f1821fd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6283c11b8c45990f98e15a54f1821fd5"></script>
 <br>
