--- a/fukusyu-no-oltudoaizu-home-s.html
+++ b/fukusyu-no-oltudoaizu-home-s.html
@@ -199,6 +199,7 @@ header {
 <br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s48.html"><b><p><font size="5">48話 女王様もいかがです？〜快楽に溺れる4Pハーレムセックス〜</font></p></b></a>
 <br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s49.html"><b><p><font size="5">49話 大好きな妹メイドとのえっち 〜おにぃちゃんの心は私だけのものだよ〜</font></p></b></a>
 <br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s50.html"><b><p><font size="5">50話 姉弟と純白騎士団長</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s51.html"><b><p><font size="5">51話 リオ(妹)に女装お姉ちゃんにさせられ尻穴を突かれるsmプレイ(♡2)</font></p></b></a>
 
 <br><script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 <br><ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
