--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s51.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s51.html
@@ -261,6 +261,7 @@ header {
 <p id="L118">そして、直ぐに俺自身のペニスをリオの尻穴の中へ入れ込んだ。</p>
 <p id="L119"><br /></p>
 <p id="L120">「よーし、めちゃくちゃにしてやるからな.....リオっ♡」</p>
+<ins class="dmm-widget-placement" data-id="d22e1724380445c26150de13c2eb75cf" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="d22e1724380445c26150de13c2eb75cf"></script>
 <p id="L121"><br /></p>
 <p id="L122">・</p>
 <p id="L123"><br /></p>
