--- a/1manga-home.html
+++ b/1manga-home.html
@@ -138,7 +138,7 @@ header {
 <b><p><font size="5">漫画</font></p></b>
 <a href="1fukusyu-no-oltudoaizu-m1.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (1).jpg"width=: auto; height=100% alt="漫画"></a>
 <a href="1fukusyu-no-oltudoaizu-m2.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot2 (1).jpg"width=: auto; height=100% alt="漫画"></a>
-
+<a href="1fukusyu-no-oltudoaizu-m3.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot3 (1).jpg"width=: auto; height=100% alt="漫画"></a>
 
 
 
