--- a/1fukusyu-no-oltudoaizu-m3.html
+++ b/1fukusyu-no-oltudoaizu-m3.html
@@ -311,10 +311,8 @@ display:none; /*非表示*/
 
 @media screen and (max-width: 479px) { /*ウィンドウ幅が最大479pxの場合に適用*/
 .right-navi {
-  background-color:
-  color: #fff;
-  float: right;
-  width: 20%;
+display:none; /*非表示*/
+}
 }
 
 @media screen and (max-width: 479px) { /*ウィンドウ幅が最大479pxの場合に適用*/
@@ -322,7 +320,7 @@ display:none; /*非表示*/
   background-color:
   color: #fff;
   float: left;
-  width: 97%;
+  width: 100%;
 }
 
 
