--- a/1fukusyu-no-oltudoaizu-m3.html
+++ b/1fukusyu-no-oltudoaizu-m3.html
@@ -218,8 +218,7 @@ header {
 <br><br>ファンザ 770円
 <br><a href="https://al.dmm.co.jp/?lurl=https%3A%2F%2Fwww.dmm.co.jp%2Fdc%2Fdoujin%2F-%2Fdetail%2F%3D%2Fcid%3Dd_236339%2F&af_id=gesunayakito-005&ch=toolbar&ch_id=text" rel="nofollow">男嫌いの女だけの国でハーレムを 復讐の異色眼兄妹 3話</a>
 <br>DLサイト 770円
-<br><a rel="noopener sponsored" href="https://www.dlsite.com/maniax/dlaf/=/t/n/link/work/aid/gyhentai/id/RJ4035.html" target="_blank">男嫌いの女だけの国でハーレムipt type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
+<br><a rel="noopener sponsored" href="https://www.dlsite.com/maniax/dlaf/=/t/n/link/work/aid/gesunayakitori/id/RJ403506.html" target="_blank">男嫌いの女だけの国でハーレムを 復讐の異色眼兄妹 3話</a>
 <br><br><a href="1fukusyu-no-oltudoaizu-m2.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="1manga-home.html"><b><p><font size="5">index</font></p></b></a>	
 		
