--- a/1manga-home.html
+++ b/1manga-home.html
@@ -136,14 +136,21 @@ header {
         <br><br><br><br><br><br><br>
 
 <b><p><font size="5">漫画</font></p></b>
+		
 <a href="1fukusyu-no-oltudoaizu-m1.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (1).jpg"width=: auto; height=100% alt="漫画"></a>
+		
+<br><ins class="dmm-widget-placement" data-id="5a3a23e3b72e07ee4ed50de640308ceb" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="5a3a23e3b72e07ee4ed50de640308ceb"></script>
+
 <a href="1fukusyu-no-oltudoaizu-m2.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot2 (1).jpg"width=: auto; height=100% alt="漫画"></a>
+		
+<script type="text/javascript">blogparts={"id":"10508","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+
 <a href="1fukusyu-no-oltudoaizu-m3.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot3 (1).jpg"width=: auto; height=100% alt="漫画"></a>
 
 
 
 
-
+<br><script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 <br><ins class="dmm-widget-placement" data-id="6cbef7d6231c7a26b128547456d25f3a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6cbef7d6231c7a26b128547456d25f3a"></script>
 <br><ins class="dmm-widget-placement" data-id="51512ab125da9923ad422ff9a7003391" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="51512ab125da9923ad422ff9a7003391"></script>
 <br><ins class="dmm-widget-placement" data-id="3e1bc332195b59993bbde1410e2daef7" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3e1bc332195b59993bbde1410e2daef7"></script>
@@ -151,14 +158,6 @@ header {
 
 
       </div>
-    <div class="right-navi">
-<br><br><br><br><br><br><br><ins class="dmm-widget-placement" data-id="0dbcce87ce4ba1f9cf3e4825f19dfca2" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="0dbcce87ce4ba1f9cf3e4825f19dfca2"></script><br><ins class="dmm-widget-placement" data-id="bb7f1c75c3bd7f4992fdffbbd49bf9fc" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="bb7f1c75c3bd7f4992fdffbbd49bf9fc"></script><br><br><ins class="dmm-widget-placement" data-id="039f5348a4a99a409f332cff5d159292" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="039f5348a4a99a409f332cff5d159292"></script><br><ins class="dmm-widget-placement" data-id="45033d5581a5d6ceb3dc3362d358c21c" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="45033d5581a5d6ceb3dc3362d358c21c"></script>
-      </div>
-
-    </div>
-    <div class="left-navi">
-<br><br><br><br><br><br><br><ins class="dmm-widget-placement" data-id="5a8617fbf1ddc1ac92df2029af846b90" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="5a8617fbf1ddc1ac92df2029af846b90"></script><br><ins class="dmm-widget-placement" data-id="0b09ef1b7ce23c3ca178c7b5e6565037" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="0b09ef1b7ce23c3ca178c7b5e6565037"></script><br><ins class="dmm-widget-placement" data-id="72a850df7fe4d121dba7edc8434c1ad3" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="72a850df7fe4d121dba7edc8434c1ad3"></script><br><ins class="dmm-widget-placement" data-id="6947219c0086ddad1cebc38095776d40" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6947219c0086ddad1cebc38095776d40"></script>
-    </div>
 
 
     <div class="footer">
