--- a/1fukusyu-no-oltudoaizu-m1.html
+++ b/1fukusyu-no-oltudoaizu-m1.html
@@ -136,7 +136,16 @@ header {
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
 <b><p><font size="5">復讐の異色眼兄妹(オッドアイズ)～種付けして完全催眠～</font></p></b>
+		
+<br>エロシーンの大まかな説明
+<br>妹と風呂　(妹オナニーっぽい洗い方)
+<br>騎士たちと人妻(乳弄り　頬叩き　フェラ　3穴　アナル　乳首嚙み)
+<br>背の低い娘と不細工な騎士　(持ち上げて性行為　乳首吸い)
+<br>乱交シーン(この表紙みたいな他にも襲われていますシーン)
+<br>母親が騎士たちにレイプされる
+
 <br><b><p><font size="5">1話 正義の虐殺と大義の強姦</font></p></b>
+<a href="1fukusyu-no-oltudoaizu-m2.html"><b><p><font size="5">＞</font></p></b></a>
 
 <ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 		
