--- a/1fukusyu-no-oltudoaizu-m2.html
+++ b/1fukusyu-no-oltudoaizu-m2.html
@@ -136,6 +136,25 @@ header {
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
 <b><p><font size="5">復讐の異色眼兄妹(オッドアイズ)～種付けして完全催眠～</font></p></b>
+		
+<br>エロシーンの大まかな説明
+告白キス
+、妹の乳首、胸弄り
+、妹、手に涎を付けて兄のペニスをコキ
+、フェラ
+、舌で、カリの溝などを舌で這う
+、パイズリ+咥える
+、クンニ
+、正常位
+、キスしながら正常位
+、妹、中出し希望
+、中出し
+、まだまだやる
+、正常位、　接合部アップ
+、測位キス
+、騎乗位　やや主観
+、抱きつき寝バックを正面からみた構図
+		
 <br><b><p><font size="5">2話 どすけべな妹と子作りSEX </font></p></b>
 
 <ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
