--- a/1fukusyu-no-oltudoaizu-m2.html
+++ b/1fukusyu-no-oltudoaizu-m2.html
@@ -138,7 +138,7 @@ header {
 <b><p><font size="5">復讐の異色眼兄妹(オッドアイズ)～種付けして完全催眠～</font></p></b>
 		
 <br>エロシーンの大まかな説明
-告白キス
+<br>告白キス
 、妹の乳首、胸弄り
 、妹、手に涎を付けて兄のペニスをコキ
 、フェラ
