--- a/1fukusyu-no-oltudoaizu-m3.html
+++ b/1fukusyu-no-oltudoaizu-m3.html
@@ -136,6 +136,27 @@ header {
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
 <b><p><font size="5">復讐の異色眼兄妹(オッドアイズ)～種付けして完全催眠～</font></p></b>
+
+<br>エロシーンの大まかな説明
+		
+<br>兄妹、妹がフェラ
+、王に惚れられ、王になってくれと言われる
+、ぶちゅーキス
+、胸鷲掴み、乳首舌ぺろぺろ、吸い上げ、握りこむ、つねる
+、シックスナイン男上女下　、喉に打ち付け
+、ケツ振り誘い
+、バックで思いっきり突く
+、中出し
+、起きるとハーレムでキス、乳首弄り(男の)、乳首舐め(男の)騎乗位、・・・
+、食事中に、フェラなど愛撫、種付け
+、城下町で、種付けをしてチェックする
+、風呂でハーレム
+、乳首弄り
+、乳首合わせ
+、夜にハーレムケツ並び種付け
+、騎乗位、クンニの3p
+、アナルにザーメン中出し、そのザーメンをステーキに出して、それを食べる(女が)、飲尿(女が飲む)
+
 <br><b><p><font size="5">3話  男嫌いの女だけの国でハーレムを </font></p></b>
 
 <ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
