--- a/1fukusyu-no-oltudoaizu-m3.html
+++ b/1fukusyu-no-oltudoaizu-m3.html
@@ -146,7 +146,7 @@ header {
 、ケツ振り誘い
 、バックで思いっきり突く
 、中出し
-、起きるとハーレムでキス、乳首弄り(男の)、乳首舐め(男の)騎乗位、・・・
+、起きるとハーレムでキス、乳首弄り(男の)、乳首舐め(男の)騎乗位、
 、食事中に、フェラなど愛撫、種付け
 、城下町で、種付けをしてチェックする
 、風呂でハーレム
