--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s3.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s3.html
@@ -777,6 +777,17 @@ header {
 <p id="L630">そして、俺たちの身体には、まるでこの村の全てが集まっているようなそんな気がしたんだ。</p>
 <script type="text/javascript">blogparts={"id":"10533","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
+	<br><b><p><font size="5">漫画版↓</font></p></b>
+<br><br>ファンザ 770円
+<br><a href="https://al.dmm.co.jp/?lurl=https%3A%2F%2Fwww.dmm.co.jp%2Fdc%2Fdoujin%2F-%2Fdetail%2F%3D%2Fcid%3Dd_231210%2F&af_id=gesunayakito-005&ch=toolbar&ch_id=text" rel="nofollow">どすけべな妹と子作りSEX 復讐の異色眼兄妹～種付けして完全催●～2話</a>
+<br>DLサイト 770円
+<br><a rel="noopener sponsored" href="https://www.dlsite.com/maniax/dlaf/=/t/n/link/work/aid/gyhentai/id/RJ390913.html" target="_blank">どすけべな妹と子作りSEX 復讐の異色眼兄妹～種付けして完全催眠～2話</a>	
+<br>無料　線画のみ
+<a href="https://gyhentai.com/1manga-home">漫画</a>
+<br>上の「漫画manga」をクリック
+
+		
+		
 <br><br><a href="fukusyu-no-oltudoaizu-s2.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
 <a href="fukusyu-no-oltudoaizu-s4.html"><b><p><font size="5">＞</font></p></b></a>	
