--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s3.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s3.html
@@ -783,7 +783,7 @@ header {
 <br>DLサイト 770円
 <br><a rel="noopener sponsored" href="https://www.dlsite.com/maniax/dlaf/=/t/n/link/work/aid/gyhentai/id/RJ390913.html" target="_blank">どすけべな妹と子作りSEX 復讐の異色眼兄妹～種付けして完全催眠～2話</a>	
 <br>無料　線画のみ
-<a href="https://gyhentai.com/1manga-home">漫画</a>
+<br><a href="https://gyhentai.com/1manga-home">漫画manga</a>
 <br>上の「漫画manga」をクリック
 
 		
