--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s1.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s1.html
@@ -506,6 +506,7 @@ header {
 <br>DLサイト 880円
 <br><a rel="noopener sponsored" href="https://www.dlsite.com/maniax/dlaf/=/t/n/link/work/aid/gyhentai/id/RJ384292.html" target="_blank">復讐の異色眼兄妹～種付けして完全催眠～ 正義の虐殺と大義の強姦</a>
 <br>無料　線画のみ
+<br><a href="https://gyhentai.com/1manga-home">漫画manga</a>
 <br>上の「漫画manga」をクリック
 <script type="text/javascript">blogparts={"id":"10533","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
